--- a/mt6000.config
+++ b/mt6000.config
@@ -179,28 +179,11 @@ CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_wpad-openssl=y
 CONFIG_PACKAGE_openssl-util=y
 
-## Policy Based Routing
-CONFIG_PACKAGE_pbr=y
-CONFIG_PACKAGE_luci-app-pbr=y
-CONFIG_PACKAGE_ip-full=y
-CONFIG_PACKAGE_resolveip=y
-
-## WireGuard VPN
-CONFIG_PACKAGE_wireguard-tools=y
-CONFIG_PACKAGE_kmod-wireguard=y
-CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_grep=y
 CONFIG_PACKAGE_sed=y
 CONFIG_PACKAGE_jq=y
-
-## AdBlock Fast
-CONFIG_PACKAGE_gawk=y
-CONFIG_PACKAGE_coreutils=y
-CONFIG_PACKAGE_coreutils-sort=y
-CONFIG_PACKAGE_adblock-fast=y
-CONFIG_PACKAGE_luci-app-adblock-fast=y
 
 ## WiFi Ucode Scripts
 CONFIG_WIFI_SCRIPTS_UCODE=y
@@ -217,9 +200,12 @@ CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_tc-tiny=y
 
-## Remove odhcp because I only need dnsmasq-full
-# CONFIG_PACKAGE_odhcp6c is not set
-# CONFIG_PACKAGE_odhcpd-ipv6only is not set
+## odhcp
+CONFIG_PACKAGE_odhcpd=y
+CONFIG_PACKAGE_odhcpd-ipv6only=y 
+CONFIG_PACKAGE_odhcpd-mod-rrdns=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_udhcp=y
 
 ## Disable unwanted packages that can open ports on router
 # CONFIG_PACKAGE_libnatpmp is not set
@@ -233,3 +219,13 @@ CONFIG_PACKAGE_tc-tiny=y
 # CONFIG_KERNEL_KALLSYMS is not set
 # CONFIG_KERNEL_MAGIC_SYSRQ is not set
 # CONFIG_KERNEL_SWAP is not set
+# CONFIG_PACKAGE_kmod-phy-aquantia is not set
+
+# Misc
+CONFIG_PACKAGE_adguardhome=y
+CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_luci-app-irqbalance=y
+CONFIG_PACKAGE_luci-app-dawn=y
+CONFIG_PACKAGE_dawn=y
+
+CONFIG_GOLANG_EXTERNAL_BOOTSTRAP_ROOT="/usr/lib/go"
