--- a/mt6000.config
+++ b/mt6000.config
@@ -235,5 +235,7 @@ CONFIG_PACKAGE_udhcp=y
 CONFIG_PACKAGE_adguardhome=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
-CONFIG_PACKAGE_dawn=y
 CONFIG_PACKAGE_luci-app-dawn=y
+CONFIG_PACKAGE_dawn=y
+
+CONFIG_GOLANG_EXTERNAL_BOOTSTRAP_ROOT="/usr/lib/go"
