--- a/mt6000.config
+++ b/mt6000.config
@@ -1,25 +1,39 @@
-# ==============================================================================
-# TARGET & ARCHITECTURE (GL.iNet GL-MT6000)
-# ==============================================================================
+#
+# Target & Hardware Support (GL-MT6000 / Filogic 830)
+#
 CONFIG_TARGET_mediatek=y
 CONFIG_TARGET_mediatek_filogic=y
 CONFIG_TARGET_mediatek_filogic_DEVICE_glinet_gl-mt6000=y
+CONFIG_TARGET_OPTIONS=y
+CONFIG_PACKAGE_kmod-mtk-eth-subs=y
+CONFIG_PACKAGE_mtkhnat_util=m
+CONFIG_PACKAGE_kmod-mtk-hnat=y
+CONFIG_PACKAGE_kmod-mt76-connac=y
+CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_usbutils=y
+CONFIG_PACKAGE_usbids=y
+CONFIG_PACKAGE_lm-sensors=y
+
+#
+# Compiler & Build Optimizations
+#
 CONFIG_DEVEL=y
-CONFIG_EXTERNAL_KERNEL_TREE=""
+CONFIG_USE_LLVM_BUILD=y
+CONFIG_IMAGEOPT=y
+CONFIG_VERSIONOPT=y
+CONFIG_USE_LTO=y
+CONFIG_USE_GC_SECTIONS=y
+CONFIG_USE_UCLIBCXX=y
+CONFIG_STRIP_KERNEL_EXPORTS=y
+# Optimization for Cortex-A53 with Crypto extensions
+CONFIG_TARGET_OPTIMIZATION="-O2 -pipe -mcpu=cortex-a53+crc+crypto"
 CONFIG_KERNEL_BUILD_DOMAIN="buildhost"
 CONFIG_KERNEL_BUILD_USER="builder"
-CONFIG_GOLANG_EXTERNAL_BOOTSTRAP_ROOT="/usr/lib/go"
+CONFIG_JSON_CYCLONEDX_SBOM=y
 
-# ==============================================================================
-# COMPILER, OPTIMIZATION & HARDENING
-# ==============================================================================
-CONFIG_TARGET_OPTIONS=y
-CONFIG_TARGET_OPTIMIZATION="-O2 -pipe -mcpu=cortex-a53+crc+crypto"
-CONFIG_USE_GC_SECTIONS=y
-CONFIG_USE_LLVM_BUILD=y
-CONFIG_USE_LTO=y
-
-# Hardening (PIE, Stack Protector, Fortify)
+#
+# Security & Hardening Options
+#
 CONFIG_BUSYBOX_CONFIG_PIE=y
 CONFIG_BUSYBOX_DEFAULT_PIE=y
 CONFIG_PKG_ASLR_PIE_ALL=y
@@ -28,273 +42,161 @@ CONFIG_KERNEL_STACKPROTECTOR_STRONG=y
 CONFIG_KERNEL_CC_STACKPROTECTOR_STRONG=y
 CONFIG_PKG_FORTIFY_SOURCE_2=y
 
-# Disabled / Not Set (Security/Bloat)
-# CONFIG_BUSYBOX_CONFIG_INCLUDE_SUSv2 is not set
-# CONFIG_PKG_ASLR_PIE_REGULAR is not set
-# CONFIG_PKG_CC_STACKPROTECTOR_REGULAR is not set
-# CONFIG_KERNEL_CC_STACKPROTECTOR_REGULAR is not set
-# CONFIG_PKG_FORTIFY_SOURCE_1 is not set
-# CONFIG_KERNEL_DEBUG_FS is not set
-# CONFIG_KERNEL_DEBUG_INFO is not set
-# CONFIG_KERNEL_ELF_CORE is not set
-# CONFIG_KERNEL_KALLSYMS is not set
-# CONFIG_KERNEL_MAGIC_SYSRQ is not set
-# CONFIG_KERNEL_SWAP is not set
-# CONFIG_PACKAGE_MAC80211_DEBUGFS is not set
+#
+# Network Stack & Offloading (BBR, CAKE, HNAT)
+#
+CONFIG_PACKAGE_kmod-tcp-bbr=y
+CONFIG_PACKAGE_kmod-google-bql=y
+CONFIG_PACKAGE_kmod-ipt-offload=y
+CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-sched-cake=y
+CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-sched-core=y
+CONFIG_PACKAGE_tc-tiny=y
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+CONFIG_PACKAGE_bridger=y
 
-# ==============================================================================
-# BASE SYSTEM & BUSYBOX
-# ==============================================================================
-CONFIG_BUSYBOX_CUSTOM=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_CROND_SPECIAL_TIMES=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_PIDOF_SINGLE=y
-CONFIG_BUSYBOX_CONFIG_FEATURE_SYSLOG_INFO=y
-CONFIG_BUSYBOX_CONFIG_PKILL=y
-CONFIG_IMAGEOPT=y
-CONFIG_JSON_CYCLONEDX_SBOM=y
+#
+# VPN & Policy Routing Support (WireGuard + PBR)
+#
+CONFIG_PACKAGE_kmod-wireguard=y
+CONFIG_PACKAGE_luci-app-wireguard=y
+CONFIG_PACKAGE_luci-app-pbr=y
+CONFIG_PACKAGE_kmod-nft-tproxy=y
+CONFIG_PACKAGE_kmod-nft-socket=y
+CONFIG_PACKAGE_kmod-nft-set-hash=y
+
+#
+# DNS & DHCP (Dnsmasq-Full + AdGuardHome)
+#
+# CONFIG_PACKAGE_dnsmasq is not set
+CONFIG_PACKAGE_dnsmasq-full=y
+CONFIG_PACKAGE_dnsmasq_full_conntrack=y
+CONFIG_PACKAGE_dnsmasq_full_dhcp=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_dnsmasq_full_dnssec=y
+CONFIG_PACKAGE_dnsmasq_full_nftset=y
+CONFIG_PACKAGE_adguardhome=y
+CONFIG_PACKAGE_odhcpd=y
+CONFIG_PACKAGE_odhcpd-ipv6only=y 
+CONFIG_PACKAGE_odhcpd-mod-rrdns=y
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_udhcp=y
+
+#
+# SSL & Cryptography (OpenSSL Optimized)
+#
+# REMOVED MBEDTLS TO FIX HOSTAPD BUILD ERROR
+# CONFIG_PACKAGE_libmbedtls is not set
+# CONFIG_PACKAGE_wpad-basic-mbedtls is not set
+CONFIG_PACKAGE_libopenssl=y
+CONFIG_PACKAGE_libopenssl-conf=y
+CONFIG_PACKAGE_openssl-util=y
+CONFIG_OPENSSL_ENGINE=y
+CONFIG_OPENSSL_ENGINE_BUILTIN=y
+CONFIG_OPENSSL_ENGINE_BUILTIN_DEVCRYPTO=y
+CONFIG_OPENSSL_OPTIMIZE_SPEED=y
+CONFIG_OPENSSL_WITH_ASM=y
+CONFIG_OPENSSL_WITH_CHACHA_POLY1305=y
+CONFIG_OPENSSL_WITH_CMS=y
+CONFIG_OPENSSL_WITH_ERROR_MESSAGES=y
+CONFIG_OPENSSL_WITH_PSK=y
+CONFIG_OPENSSL_WITH_SRP=y
+CONFIG_OPENSSL_WITH_TLS13=y
+CONFIG_OPENSSL_NO_DEPRECATED=y
+CONFIG_LUA_ECO_OPENSSL=y
+CONFIG_LIBCURL_OPENSSL=y
+CONFIG_PACKAGE_luci-ssl-openssl=y
+CONFIG_PACKAGE_libustream-openssl=y
+CONFIG_PACKAGE_wpad-openssl=y
+CONFIG_PACKAGE_apk-openssl=y
+CONFIG_PACKAGE_kmod-cryptodev=y
+
+#
+# Wireless Management (DAWN Band Steering)
+#
+CONFIG_PACKAGE_dawn=y
+CONFIG_PACKAGE_luci-app-dawn=y
+CONFIG_WIFI_SCRIPTS_UCODE=y
+
+#
+# Text Editor (nano-full)
+#
+# CONFIG_PACKAGE_nano is not set
+CONFIG_PACKAGE_nano-full=y
 CONFIG_PACKAGE_terminfo=y
-CONFIG_PACKAGE_libatomic=y
-CONFIG_PACKAGE_libstdcpp=m
-CONFIG_PACKAGE_libudev-zero=y
+# CONFIG_BUSYBOX_CONFIG_VI is not set
+
+#
+# LuCI Web Interface & Apps
+#
+CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_luci-light=y
+CONFIG_PACKAGE_luci-mod-admin-full=y
+CONFIG_PACKAGE_luci-mod-network=y
+CONFIG_PACKAGE_luci-mod-status=y
+CONFIG_PACKAGE_luci-mod-system=y
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-app-advanced=y
+CONFIG_PACKAGE_luci-app-firewall=y
+CONFIG_PACKAGE_luci-app-package-manager=y
+CONFIG_PACKAGE_luci-app-irqbalance=y
+CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-proto-ipv6=y
+CONFIG_PACKAGE_luci-proto-ppp=y
+
+#
+# System Utilities, Libraries & Storage
+#
+CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_jq=y
+CONFIG_PACKAGE_grep=y
+CONFIG_PACKAGE_sed=y
+CONFIG_PACKAGE_blkid=y
+CONFIG_PACKAGE_dbus=y
+CONFIG_PACKAGE_uhttpd=y
+CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
 CONFIG_PACKAGE_rpcd-mod-iwinfo=y
 CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rpcsys=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
+CONFIG_PACKAGE_rpcd-mod-ucode=y
+CONFIG_PACKAGE_kmod-lib-zstd=y
+CONFIG_PACKAGE_zstd=y
+CONFIG_GOLANG_EXTERNAL_BOOTSTRAP_ROOT="/usr/lib/go"
 
-# ==============================================================================
-# CRYPTOGRAPHY & SSL (OpenSSL Optimized)
-# ==============================================================================
-# Hardware Acceleration & Engine
-CONFIG_OPENSSL_ENGINE=y
-CONFIG_OPENSSL_ENGINE_BUILTIN=y
-CONFIG_OPENSSL_ENGINE_BUILTIN_DEVCRYPTO=y
-CONFIG_OPENSSL_OPTIMIZE_SPEED=y
-CONFIG_OPENSSL_WITH_ASM=y
-CONFIG_PACKAGE_kmod-cryptodev=y
+#
+# Kernel Modules & Filesystems
+#
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-f2fs=y
+CONFIG_PACKAGE_kmod-nls-cp437=y
+CONFIG_PACKAGE_kmod-nls-iso8859-1=y
+CONFIG_PACKAGE_kmod-nls-utf8=y
+CONFIG_PACKAGE_kmod-zram=y
+CONFIG_PACKAGE_zram-swap=y
+CONFIG_PACKAGE_kmod-ramoops=y
+CONFIG_PACKAGE_kmod-iosched-deadline=y
 
-# Algorithms
-CONFIG_OPENSSL_WITH_CHACHA_POLY1305=y
-CONFIG_OPENSSL_WITH_CMS=y
-CONFIG_OPENSSL_WITH_IDEA=y
-CONFIG_OPENSSL_WITH_MDC2=y
-CONFIG_OPENSSL_WITH_PSK=y
-CONFIG_OPENSSL_WITH_SEED=y
-CONFIG_OPENSSL_WITH_SRP=y
-CONFIG_OPENSSL_WITH_TLS13=y
-CONFIG_OPENSSL_WITH_WHIRLPOOL=y
-CONFIG_PACKAGE_kmod-crypto-crc32=y
-CONFIG_PACKAGE_kmod-crypto-ecb=y
-CONFIG_PACKAGE_kmod-crypto-lib-aescfb=m
-CONFIG_PACKAGE_kmod-lib-crc16=y
-
-# Libraries & Tools
-CONFIG_PACKAGE_libopenssl=y
-CONFIG_PACKAGE_libopenssl-conf=y
-CONFIG_PACKAGE_openssl-util=y
-CONFIG_PACKAGE_apk-openssl=y
-CONFIG_PACKAGE_ca-bundle=y
-CONFIG_OPENSSL_WITH_ERROR_MESSAGES=y
-CONFIG_OPENSSL_NO_DEPRECATED=y
-
-# Lua & Web SSL
-CONFIG_LUA_ECO_OPENSSL=y
-CONFIG_PACKAGE_luci-ssl-openssl=y
-CONFIG_PACKAGE_libustream-openssl=y
-CONFIG_PACKAGE_wpad-openssl=y
-
-# ==============================================================================
-# NETWORK ESSENTIALS (DNS, DHCP, Firewall)
-# ==============================================================================
-# Dnsmasq (Full version)
-# CONFIG_PACKAGE_dnsmasq is not set
-CONFIG_PACKAGE_dnsmasq-full=y
-CONFIG_PACKAGE_dnsmasq_full_auth=y
-CONFIG_PACKAGE_dnsmasq_full_conntrack=y
-CONFIG_PACKAGE_dnsmasq_full_dhcp=y
-CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
-CONFIG_PACKAGE_dnsmasq_full_dnssec=y
-CONFIG_PACKAGE_dnsmasq_full_nftset=y
-CONFIG_PACKAGE_dnsmasq_full_noid=y
-CONFIG_PACKAGE_dnsmasq_full_tftp=y
-
-# IPv6 & DHCPv6
-CONFIG_PACKAGE_odhcpd=y
-CONFIG_PACKAGE_odhcpd-ipv6only=y
-CONFIG_PACKAGE_odhcpd-mod-rrdns=y
-CONFIG_PACKAGE_odhcp6c=y
-CONFIG_PACKAGE_udhcp=y
-
-# Netfilter & Firewall
-CONFIG_PACKAGE_libnetfilter-conntrack=y
-CONFIG_PACKAGE_libnfnetlink=y
-CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
-CONFIG_PACKAGE_luci-app-firewall=y
-# CONFIG_PACKAGE_libnatpmp is not set
-
-# ==============================================================================
-# TRAFFIC CONTROL & BBR (SQM / CAKE)
-# ==============================================================================
-CONFIG_PACKAGE_kmod-tcp-bbr=y
-CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-cake=y
-CONFIG_PACKAGE_kmod-sched-act-vlan=y
-CONFIG_PACKAGE_kmod-sched-bpf=y
-CONFIG_PACKAGE_kmod-sched-flower=y
-CONFIG_PACKAGE_kmod-ifb=y
-CONFIG_PACKAGE_tc-tiny=y
-CONFIG_PACKAGE_luci-app-sqm=y
-
-# ==============================================================================
-# VPN & SSH
-# ==============================================================================
-# WireGuard
-CONFIG_PACKAGE_wireguard-tools=y
-CONFIG_PACKAGE_kmod-wireguard=y
-CONFIG_PACKAGE_luci-proto-wireguard=y
-
-# OpenSSH (Replaces Dropbear)
+#
+# SSH Server Configuration
+#
 # CONFIG_PACKAGE_dropbear is not set
 CONFIG_PACKAGE_openssh-keygen=y
 CONFIG_PACKAGE_openssh-moduli=y
 CONFIG_PACKAGE_openssh-server=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 
-# ==============================================================================
-# WIRELESS & MESH
-# ==============================================================================
-CONFIG_PACKAGE_mtkhnat_util=m
-CONFIG_PACKAGE_kmod-oid-registry=y
-CONFIG_PACKAGE_kmod-libphy=m
-
-# DAWN (Roaming)
-CONFIG_PACKAGE_dawn=y
-CONFIG_PACKAGE_luci-app-dawn=y
-CONFIG_PACKAGE_umdns=y
-
-# Ucode Scripts
-CONFIG_WIFI_SCRIPTS_UCODE=y
-CONFIG_PACKAGE_liblucihttp-ucode=y
-CONFIG_PACKAGE_rpcd-mod-ucode=y
-CONFIG_PACKAGE_ucode-mod-html=y
-CONFIG_PACKAGE_ucode-mod-log=y
-CONFIG_PACKAGE_ucode-mod-math=y
-CONFIG_PACKAGE_ucode-mod-socket=y
-
-# ==============================================================================
-# USB, STORAGE & TETHERING
-# ==============================================================================
-# Hardware Support
-CONFIG_PACKAGE_libusb-1.0=y
-CONFIG_PACKAGE_usbids=y
-CONFIG_PACKAGE_usbutils=y
-CONFIG_PACKAGE_kmod-usb-storage-uas=y
-
-# Filesystems
-CONFIG_PACKAGE_kmod-fs-ext4=y
-CONFIG_PACKAGE_kmod-fs-f2fs=y
-CONFIG_PACKAGE_e2fsprogs=y
-CONFIG_PACKAGE_f2fs-tools=y
-CONFIG_PACKAGE_blkid=y
-CONFIG_PACKAGE_block-mount=y
-
-# Tethering (Android/iOS)
-CONFIG_PACKAGE_kmod-usb-net-rndis=y
-CONFIG_PACKAGE_kmod-usb-net-ipheth=y
-CONFIG_PACKAGE_usbmuxd=y
-
-# ==============================================================================
-# WEB INTERFACE (LuCI)
-# ==============================================================================
-CONFIG_PACKAGE_luci-base=y
-CONFIG_PACKAGE_luci-light=y
-CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_uhttpd=y
-CONFIG_PACKAGE_uhttpd-mod-ubus=y
-CONFIG_PACKAGE_cgi-io=y
-CONFIG_PACKAGE_liblucihttp=y
-
-# Apps & Modules
-CONFIG_PACKAGE_luci-mod-admin-full=y
-CONFIG_PACKAGE_luci-mod-network=y
-CONFIG_PACKAGE_luci-mod-status=y
-CONFIG_PACKAGE_luci-mod-system=y
-CONFIG_PACKAGE_luci-app-advanced=y
-CONFIG_PACKAGE_luci-app-package-manager=y
-CONFIG_PACKAGE_luci-app-irqbalance=y
-CONFIG_PACKAGE_luci-app-ttyd=y
-
-# Protocols
-CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_luci-proto-ppp=y
-
-# ==============================================================================
-# UTILITIES & LIBRARIES
-# ==============================================================================
-# curl
-CONFIG_LIBCURL_COOKIES=y
-CONFIG_LIBCURL_FILE=y
-CONFIG_LIBCURL_FTP=y
-CONFIG_LIBCURL_HTTP=y
-CONFIG_LIBCURL_HTTP2=y
-CONFIG_LIBCURL_PROXY=y
-CONFIG_LIBCURL_UNIX_SOCKETS=y
-CONFIG_LIBCURL_OPENSSL=y
-CONFIG_LIBCURL_HTTP_AUTH=y
-CONFIG_LIBCURL_NO_SMB="!"
-CONFIG_PACKAGE_libcurl=y
-CONFIG_PACKAGE_curl=y
-
-# CLI Tools
-CONFIG_PACKAGE_nano-full=y
-CONFIG_PACKAGE_ethtool=y
-CONFIG_PACKAGE_grep=y
-CONFIG_PACKAGE_sed=y
-CONFIG_PACKAGE_jq=y
-
-# Libraries
-CONFIG_PACKAGE_libbpf=y
-CONFIG_PACKAGE_libdaemon=y
-CONFIG_PACKAGE_libdbus=y
-CONFIG_PACKAGE_libelf=y
-CONFIG_PACKAGE_libevdev=y
-CONFIG_PACKAGE_libexpat=y
-CONFIG_PACKAGE_libgmp=y
-CONFIG_PACKAGE_libncurses=y
-CONFIG_PACKAGE_libnettle=y
-CONFIG_PACKAGE_libnghttp2=y
-CONFIG_PACKAGE_libnl-core=y
-CONFIG_PACKAGE_libnl-genl=y
-CONFIG_PACKAGE_libpcre2=y
-CONFIG_PACKAGE_libreadline=y
-CONFIG_PACKAGE_kmod-nls-cp437=y
-CONFIG_PACKAGE_kmod-nls-iso8859-1=y
-CONFIG_PACKAGE_kmod-nls-utf8=y
-
-# ==============================================================================
-# 3RD PARTY & MISC
-# ==============================================================================
-CONFIG_PACKAGE_adguardhome=y
-CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_dbus=y
-CONFIG_NEED_BPF_TOOLCHAIN=y
-
-# ==============================================================================
-# VERSIONING
-# ==============================================================================
-CONFIG_VERSIONOPT=y
-CONFIG_VERSION_DIST="OpenWrt"
-CONFIG_VERSION_REPO="https://raw.githubusercontent.com/pesa1234/MT6000_cust_build/refs/heads/main"
-CONFIG_VERSION_FILENAMES=y
-CONFIG_VERSION_CODE_FILENAMES=y
-CONFIG_VERSION_BUG_URL=""
-CONFIG_VERSION_CODE=""
-CONFIG_VERSION_FIRMWARE_URL=""
-CONFIG_VERSION_HOME_URL=""
-CONFIG_VERSION_HWREV=""
-CONFIG_VERSION_MANUFACTURER=""
-CONFIG_VERSION_MANUFACTURER_URL=""
-CONFIG_VERSION_NUMBER=""
-CONFIG_VERSION_PRODUCT=""
-CONFIG_VERSION_SUPPORT_URL=""
+#
+# Cleanup: Disabled Unwanted Packages
+#
+# CONFIG_PACKAGE_mt7601u-firmware is not set
+# CONFIG_PACKAGE_rtl8922ae-firmware is not set
+# CONFIG_PACKAGE_libnatpmp is not set
+# CONFIG_KERNEL_DEBUG_FS is not set
+# CONFIG_KERNEL_SWAP is not set
