--- a/mt6000.config
+++ b/mt6000.config
@@ -25,7 +25,7 @@ CONFIG_USE_LTO=y
 CONFIG_USE_GC_SECTIONS=y
 CONFIG_USE_UCLIBCXX=y
 CONFIG_STRIP_KERNEL_EXPORTS=y
-# Optimization for Cortex-A53 with Crypto extensions
+# Optimization for Cortex-A53 with Crypto extensions (Filogic 830)
 CONFIG_TARGET_OPTIMIZATION="-O2 -pipe -mcpu=cortex-a53+crc+crypto"
 CONFIG_KERNEL_BUILD_DOMAIN="buildhost"
 CONFIG_KERNEL_BUILD_USER="builder"
@@ -84,17 +84,26 @@ CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_udhcp=y
 
 #
-# SSL & Cryptography (OpenSSL Optimized)
+# SSL & Cryptography (Optimized for Filogic 830)
 #
-# REMOVED MBEDTLS TO FIX HOSTAPD BUILD ERROR
+# Ensure mbedTLS is completely out to avoid conflicts
 # CONFIG_PACKAGE_libmbedtls is not set
 # CONFIG_PACKAGE_wpad-basic-mbedtls is not set
+
+# Core Libraries & Root Certificates (CRITICAL)
 CONFIG_PACKAGE_libopenssl=y
 CONFIG_PACKAGE_libopenssl-conf=y
 CONFIG_PACKAGE_openssl-util=y
+CONFIG_PACKAGE_ca-bundle=y
+
+# Hardware Acceleration for MT6000
+CONFIG_PACKAGE_kmod-cryptodev=y
+CONFIG_PACKAGE_kmod-crypto-user=y
 CONFIG_OPENSSL_ENGINE=y
 CONFIG_OPENSSL_ENGINE_BUILTIN=y
 CONFIG_OPENSSL_ENGINE_BUILTIN_DEVCRYPTO=y
+
+# OpenSSL Fine-Tuning
 CONFIG_OPENSSL_OPTIMIZE_SPEED=y
 CONFIG_OPENSSL_WITH_ASM=y
 CONFIG_OPENSSL_WITH_CHACHA_POLY1305=y
@@ -104,34 +113,33 @@ CONFIG_OPENSSL_WITH_PSK=y
 CONFIG_OPENSSL_WITH_SRP=y
 CONFIG_OPENSSL_WITH_TLS13=y
 CONFIG_OPENSSL_NO_DEPRECATED=y
+
+# Application Integration
 CONFIG_LUA_ECO_OPENSSL=y
 CONFIG_LIBCURL_OPENSSL=y
 CONFIG_PACKAGE_luci-ssl-openssl=y
 CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_wpad-openssl=y
 CONFIG_PACKAGE_apk-openssl=y
-CONFIG_PACKAGE_kmod-cryptodev=y
 
 #
-# Wireless Management (DAWN Band Steering)
+# Wireless Management
 #
 CONFIG_PACKAGE_dawn=y
 CONFIG_PACKAGE_luci-app-dawn=y
 CONFIG_WIFI_SCRIPTS_UCODE=y
 
 #
-# Text Editor (nano-full)
+# Text Editor
 #
-# CONFIG_PACKAGE_nano is not set
 CONFIG_PACKAGE_nano-full=y
 CONFIG_PACKAGE_terminfo=y
-# CONFIG_BUSYBOX_CONFIG_VI is not set
 
 #
-# LuCI Web Interface & Apps
+# LuCI Web Interface 
 #
+CONFIG_PACKAGE_luci=y
 CONFIG_PACKAGE_luci-base=y
-CONFIG_PACKAGE_luci-light=y
 CONFIG_PACKAGE_luci-mod-admin-full=y
 CONFIG_PACKAGE_luci-mod-network=y
 CONFIG_PACKAGE_luci-mod-status=y
@@ -146,17 +154,8 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 
 #
-# System Utilities, Libraries & Storage
+# System Utilities & Communication (Critical for LuCI)
 #
-CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_htop=y
-CONFIG_PACKAGE_curl=y
-CONFIG_PACKAGE_jq=y
-CONFIG_PACKAGE_grep=y
-CONFIG_PACKAGE_sed=y
-CONFIG_PACKAGE_blkid=y
-CONFIG_PACKAGE_dbus=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_rpcd=y
@@ -166,12 +165,18 @@ CONFIG_PACKAGE_rpcd-mod-luci=y
 CONFIG_PACKAGE_rpcd-mod-rpcsys=y
 CONFIG_PACKAGE_rpcd-mod-rrdns=y
 CONFIG_PACKAGE_rpcd-mod-ucode=y
+CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_jq=y
+CONFIG_PACKAGE_blkid=y
+CONFIG_PACKAGE_dbus=y
 CONFIG_PACKAGE_kmod-lib-zstd=y
 CONFIG_PACKAGE_zstd=y
-CONFIG_GOLANG_EXTERNAL_BOOTSTRAP_ROOT="/usr/lib/go"
 
 #
-# Kernel Modules & Filesystems
+# Storage & Filesystems
 #
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-fs-f2fs=y
@@ -184,7 +189,7 @@ CONFIG_PACKAGE_kmod-ramoops=y
 CONFIG_PACKAGE_kmod-iosched-deadline=y
 
 #
-# SSH Server Configuration
+# SSH Server (Using OpenSSH instead of Dropbear)
 #
 # CONFIG_PACKAGE_dropbear is not set
 CONFIG_PACKAGE_openssh-keygen=y
@@ -193,10 +198,7 @@ CONFIG_PACKAGE_openssh-server=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 
 #
-# Cleanup: Disabled Unwanted Packages
+# Cleanup
 #
-# CONFIG_PACKAGE_mt7601u-firmware is not set
-# CONFIG_PACKAGE_rtl8922ae-firmware is not set
 # CONFIG_PACKAGE_libnatpmp is not set
 # CONFIG_KERNEL_DEBUG_FS is not set
-# CONFIG_KERNEL_SWAP is not set
