--- a/mt6000.config
+++ b/mt6000.config
@@ -10,7 +10,7 @@ CONFIG_PACKAGE_mtkhnat_util=m
 CONFIG_PACKAGE_kmod-mtk-hnat=y
 CONFIG_PACKAGE_kmod-mt76-connac=y
 CONFIG_PACKAGE_ethtool=y
-CONFIG_PACKAGE_usbutils=y
+#CONFIG_PACKAGE_usbutils=y
 CONFIG_PACKAGE_usbids=y
 CONFIG_PACKAGE_lm-sensors=y
 
