--- a/mt6000.config
+++ b/mt6000.config
@@ -105,7 +105,6 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 CONFIG_PACKAGE_mt7601u-firmware=m
-CONFIG_PACKAGE_mtkhnat_util=m
 CONFIG_PACKAGE_rpcd=y
 CONFIG_PACKAGE_rpcd-mod-file=y
 CONFIG_PACKAGE_rpcd-mod-iwinfo=y
@@ -195,13 +194,6 @@ CONFIG_PACKAGE_grep=y
 CONFIG_PACKAGE_sed=y
 CONFIG_PACKAGE_jq=y
 
-## AdBlock Fast
-CONFIG_PACKAGE_gawk=y
-CONFIG_PACKAGE_coreutils=y
-CONFIG_PACKAGE_coreutils-sort=y
-CONFIG_PACKAGE_adblock-fast=y
-CONFIG_PACKAGE_luci-app-adblock-fast=y
-
 ## WiFi Ucode Scripts
 CONFIG_WIFI_SCRIPTS_UCODE=y
 CONFIG_PACKAGE_liblucihttp-ucode=y
@@ -217,9 +209,8 @@ CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_tc-tiny=y
 
-## Remove odhcp because I only need dnsmasq-full
-# CONFIG_PACKAGE_odhcp6c is not set
-# CONFIG_PACKAGE_odhcpd-ipv6only is not set
+CONFIG_PACKAGE_odhcp6c=y
+CONFIG_PACKAGE_odhcpd-ipv6only=y
 
 ## Disable unwanted packages that can open ports on router
 # CONFIG_PACKAGE_libnatpmp is not set
@@ -233,3 +224,20 @@ CONFIG_PACKAGE_tc-tiny=y
 # CONFIG_KERNEL_KALLSYMS is not set
 # CONFIG_KERNEL_MAGIC_SYSRQ is not set
 # CONFIG_KERNEL_SWAP is not set
+
+## System Administration and Monitoring Tools
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_nano-full=y
+
+## Security Hardening
+CONFIG_PACKAGE_fail2ban=y
+CONFIG_PACKAGE_luci-app-fail2ban=y
+
+## Adguard Home DNS Filtering
+CONFIG_PACKAGE_adguardhome=y
+CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_luci-app-irqbalance=y
+
+## WiFi Load Balancing and Optimization
+CONFIG_PACKAGE_luci-app-dawn=y
+CONFIG_PACKAGE_dawn=y
