--- a/mt6000.config
+++ b/mt6000.config
@@ -233,3 +233,7 @@ CONFIG_PACKAGE_tc-tiny=y
 # CONFIG_KERNEL_KALLSYMS is not set
 # CONFIG_KERNEL_MAGIC_SYSRQ is not set
 # CONFIG_KERNEL_SWAP is not set
+
+
+# Adguard home 
+CONFIG_PACKAGE_adguardhome=y
