attempt to fix build

--- a/mt6000.config
+++ b/mt6000.config
@@ -35,6 +35,7 @@ CONFIG_KERNEL_BUILD_USER="builder"
 CONFIG_JSON_CYCLONEDX_SBOM=y
 CONFIG_USE_LLVM_BUILD=y
 CONFIG_NEED_BPF_TOOLCHAIN=y
+CONFIG_GO_ENABLE_CGO=n
 
 ################################################################################
 # COMPILER AND TOOLCHAIN OPTIMIZATION
