speed up build by enabling reproduble builds

--- a/mt6000.config
+++ b/mt6000.config
@@ -36,6 +36,7 @@ CONFIG_JSON_CYCLONEDX_SBOM=y
 CONFIG_USE_LLVM_BUILD=y
 CONFIG_NEED_BPF_TOOLCHAIN=y
 CONFIG_GO_ENABLE_CGO=n
+CONFIG_REPRODUCIBLE_BUILD_PARALLEL=y
 
 ################################################################################
 # COMPILER AND TOOLCHAIN OPTIMIZATION
